# Ray-Tracing-Graphics-Engine

./: .gitignore  LICENSE
src/: CMakeLists.txt  Camera.cpp  Camera.h  ImagePoint.h  ImagePoint.h.gch  Makefile  Projection.h  Projection.h.gch  World.cpp  World.h  image.ppm  main  main.cpp  reg.ppm
src/data_structures/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  BVHNode.cpp  BVHNode.h  CMakeLists.txt
src/image/: CMakeLists.txt  Image.cpp  Image.h  Image.h.gch
src/lights/: CMakeLists.txt  PointLight.cpp  PointLight.h  XYRectangleLight.cpp  XYRectangleLight.h
src/math/: CMakeLists.txt  Point.h  Point3.cpp  Point3.h  Ray.cpp  Ray.h  Vec.h  Vec.h.gch  Vec3.cpp  Vec3.h  Vec3.h.gch
src/objects/: CMakeLists.txt  HitInfo.h  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  XYRectangle.cpp  XYRectangle.h
test/: CMakeLists.txt  Camera_test  Camera_test.cpp  Makefile  Point3_test  Point3_test.cpp  Vec3_test  Vec3_test.cpp  World_test  World_test.cpp  image.ppm
test/data_structures/: AABB_test.cpp  BVHNode_test.cpp  BVH_test.cpp  CMakeLists.txt
test/image/: CMakeLists.txt
test/lights/: CMakeLists.txt
test/math/: CMakeLists.txt  Ray_test  Ray_test.cpp  Vec3_test  Vec3_test.cpp
test/objects/: CMakeLists.txt  Mesh_test.cpp  Object_test.cpp  Plane_test  Plane_test.cpp  Sphere_test  Sphere_test.cpp  Triangle_test  Triangle_test.cpp  a.out
